...
      width: double.infinity,
      height: 54.w,
      child: Stack(
        alignment: Alignment.center,
        children: [
          Text(
            '明细详情',
            style: TextStyle(
              color: const Color(0xFF111111),
              fontSize: 18.sp,
              fontWeight: FontWeight.w600,
            ),
          ),
...
